profile for admin

--- a/proj2_from_scratch/scheduler/app/views/home/index.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/home/index.html.erb
@@ -32,3 +32,20 @@
     </div>
   </div>
 </div>
+
+<div class="container">
+  <div class="row">
+    <h3>Admins</h3>
+    <div class="column">
+      <table class="table">
+        <tbody>
+          <% @admins.each do |admin| %>
+            <tr>
+              <%= render admin %>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
