--- a/proj2_from_scratch/scheduler/app/views/admins/show.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/admins/show.html.erb
@@ -1,4 +1,10 @@
 <h3>Admin</h3>
 <p>Email: <%= @admin.email if @admin.email %></p>
 
+
+
+<% if admin_signed_in? %>
+	<%= button_to "Add Course", course_new_path, :class => "button medium", :method => :get %>
+<% end %>
+
 <%= link_to 'back', root_path %>
