--- a/proj2_from_scratch/scheduler/app/views/layouts/_navigation_links.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/layouts/_navigation_links.html.erb
@@ -1,5 +1,5 @@
 <% if admin_signed_in? %>
-	<%= link_to "Admin Edit", edit_admin_registration_path %>
+	<%= button_to "Admin Edit", edit_admin_registration_path, :class => "button medium", :method => :get %>
   	<%= button_to "Admin Logout", destroy_admin_session_path, :class => "button medium", :method => 'delete' %>
 <% elsif student_signed_in? %>
 	<%= button_to "Student Edit", edit_student_registration_path, :class => "button medium", :method => :get %>
