--- a/proj2_from_scratch/scheduler/app/views/courses/new.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/courses/new.html.erb
@@ -6,19 +6,19 @@
     </div>
     <div class="form-group">
       <%= c.label :day, 'Day (format: "Monday")' %>
-      <%= c.text_field :day, :autofocus => true, class: 'form-control' %>
+      <%= c.text_field :day, class: 'form-control' %>
     </div>
     <div class="form-group">
       <%= c.label :time, 'Time (format: "9")' %>
-      <%= c.text_field :time, :autofocus => true, class: 'form-control' %>
+      <%= c.text_field :time, class: 'form-control' %>
     </div>
     <div class="form-group">
       <%= c.label :location, 'Location' %>
-      <%= c.text_field :location, :autofocus => true, class: 'form-control' %>
+      <%= c.text_field :location, class: 'form-control' %>
     </div>
     <div class="form-group">
       <%= c.label :description, 'Description' %>
-      <%= c.text_field :description, :autofocus => true, class: 'form-control' %>
+      <%= c.text_field :description, class: 'form-control' %>
     </div>
     <%= c.submit 'Submit', :class => 'button right' %>
 <% end %>
