--- a/proj2_from_scratch/scheduler/app/views/home/login.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/home/login.html.erb
@@ -1,5 +1,7 @@
-<h1> Log into your account </h1>
-<p> What are you logging in as? <br>
-  <%= button_to "Admin", new_admin_session_path, :class => "button medium", :method => :get %>
-  <%= button_to "Student", new_student_session_path, :class => "button medium", :method => :get %>
-</p>
+<div class="choose-container">
+  <h1> Log into your account </h1>
+  <p> What are you logging in as? <br>
+    <%= button_to "Admin", new_admin_session_path, :class => "button medium", :method => :get %>
+    <%= button_to "Student", new_student_session_path, :class => "button medium", :method => :get %>
+  </p>
+</div>
