--- a/proj2_from_scratch/scheduler/app/views/layouts/_navigation.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-inverse">
+<nav class="navbar navbar-styling" style="box-shadow: none;">
 <div class="container-fluid">
 <!-- Brand and toggle get grouped for better mobile display -->
 <div class="navbar-header">
@@ -10,17 +10,13 @@
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
   <ul class="nav navbar-nav navbar-right">
     <% if current_student %>
-    <li><a href="#"><%= current_user.email %></a></li>
+    <li><a href="/students/edit"><%= current_student.email %></a></li>
     <li> <%= link_to "Logout", destroy_student_session_path, method: :delete %> </li>
     <% else %>
       <% if current_admin %>
-      <li><a href="#"><%= current_admin.email %></a></li>
+      <li><a href="/admins/edit"><%= current_admin.email %></a></li>
       <li> <%= link_to "Logout", destroy_admin_session_path, method: :delete %> </li>
       <% else %>
-      <!-- <li> <%= link_to "Admin Login", admin_session_path %> </li>
-      <li> <%= link_to "Student Login", student_session_path %> </li>
-      <li> <%= link_to "Admin Signup", new_admin_registration_path %> </li>
-      <li> <%= link_to "Student Signup", new_student_registration_path %> </li> -->
       <li> <%= link_to "Log In", home_login_path %> </li>
       <li> <%= link_to "Sign Up", home_signup_path %> </li>
 
