--- a/proj2_from_scratch/scheduler/app/views/schedules/index.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/schedules/index.html.erb
@@ -7,7 +7,7 @@
         <tbody>
           <% @schedules.each do |s| %>
             <tr>
-              <%= s.id %>
+              <%= s.courses %>
             </tr>
           <% end %>
         </tbody>
