--- a/proj2_from_scratch/scheduler/app/assets/stylesheets/edit.css
+++ b/proj2_from_scratch/scheduler/app/assets/stylesheets/edit.css
@@ -51,7 +51,17 @@
   font-size: 150px;
   text-align: center;
   font-family: 'Luckiest Guy', sans-serif;
-  margin-top: 150px;
+  color: white;
+  /*margin-top: 150px;*/
+  margin-top: -20px;
+  padding-top: 50px;
+  padding-left: 200px;
+  opacity: 0.9;
+}
+
+.home-page {
+  background: url("home-page-banner.jpg");
+  background-repeat: no-repeat;
   opacity: 0.7;
 }
 
