reset database --trying something

--- a/proj2_from_scratch/scheduler/app/views/home/index.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
-
-
+<!-- <p><%= Student.count %> student(s) registered</p>
+<p><%= Admin.count %> admin(s) registered</p>
+<p><%= Course.count %> course(s) added </p> -->
 
 <div class="home-page" style="text-align: center;">
 <!-- <p><%= Student.count %> student(s) registered</p>
