added search bar

--- a/proj2_from_scratch/scheduler/app/views/schedules/index.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/schedules/index.html.erb
@@ -7,7 +7,10 @@
         <tbody>
           <% @schedules.each do |s| %>
             <tr>
-              <%= s.courses %>
+              <% if s.email == current_student.email %>
+                <%= s.id %>
+                <%= s.courses %> <br>
+              <% end %>
             </tr>
           <% end %>
         </tbody>
