--- a/proj2_from_scratch/scheduler/app/views/schedules/new.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/schedules/new.html.erb
@@ -3,10 +3,17 @@
   <div class="row">
     <h3>Create a New Schedule!</h3>
     <div class="column">
+      <%= form_tag(courses_path, :method => "get", id: "search-form") do %>
+      <%= text_field_tag :search, params[:search], placeholder: "Search Courses", size: 50 %>
+      <%= submit_tag "Search", :class => 'button right' %>
+      <% end %>
+    </div>
+
+    <br> <br>
+    <div class="column">
       <table class="table">
         <tbody>
           <%= form_for @schedule, :url => schedules_path do |c| %>
-
               <%= c.submit 'Submit', :class => 'button right' %>
           <% end %>
         </tbody>
