able to view courses

--- a/proj2_from_scratch/scheduler/app/views/courses/index.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/courses/index.html.erb
@@ -7,7 +7,7 @@
         <tbody>
           <% @courses.each do |c| %>
             <tr>
-              <%= c.description %><br>
+              <%= c.subject %>, <%= c.title%> <br>
             </tr>
           <% end %>
         </tbody>
