done with listing all the courses

--- a/proj2_from_scratch/scheduler/app/views/courses/department.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/courses/department.html.erb
@@ -1,7 +1,6 @@
-
 <div class="container">
   <div class="row">
-    <h2>Browse by Department</h2>
+    <h2><%= @subject %></h2>
     <div class="column">
       <table class="table">
         <tbody>
