working on schedule to courses

--- a/proj2_from_scratch/scheduler/app/views/courses/index.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/courses/index.html.erb
@@ -7,7 +7,8 @@
         <tbody>
           <% @courses.each do |c| %>
             <tr>
-              <%= c.description %><br>
+              <%= c.id %>: <%= c.title %>: <%= c.course_name %>
+              <br>
             </tr>
           <% end %>
         </tbody>
