--- a/proj2_from_scratch/scheduler/app/views/schedules/index.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/schedules/index.html.erb
@@ -9,7 +9,7 @@
             <tr>
               <% if s.email == current_student.email %>
                 <%= s.id %>
-                <%= s.courses %> <br>
+                <%= s.courses.title %> <br>
               <% end %>
             </tr>
           <% end %>
