--- a/proj2_from_scratch/scheduler/app/views/schedules/new.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/schedules/new.html.erb
@@ -1,20 +1,49 @@
 
 <div class="container">
   <div class="row">
-    <h3>Create a New Schedule!</h3>
+    <h3>Create Schedule!</h3>
     <div class="column">
-      <%= form_tag(courses_path, :method => "get", id: "search-form") do %>
+      <%= form_tag(schedule_new_path, :method => "get", id: "search-form") do %>
       <%= text_field_tag :search, params[:search], placeholder: "Search Courses", size: 50 %>
       <%= submit_tag "Search", :class => 'button right' %>
       <% end %>
     </div>
 
+  <% if @courses %>
+    <div class="container">
+      <div class="row">
+        <h2>Browse by Department</h2>
+        <div class="column">
+          <table class="table">
+            <tbody>
+              <% @courses.each do |c| %>
+                <tr>
+                  <%= c.id %>: <%= c.title %>: <%= c.course_name %>
+                  <%= button_to "Add Class", add_class_path(course_id: c.id, schedule: @schedule), :class => "button medium", :method => :get %>
+                  <br>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <% end %>
+
+    <h4> Saved Courses </h4>
+    <% @schedule.courses.each do |course| %>
+          <%= course.id %>, <%= course.title %> <br>
+        <% end %>
+
+
     <br> <br>
+
+
     <div class="column">
       <table class="table">
         <tbody>
           <%= form_for @schedule, :url => schedules_path do |c| %>
-              <%= c.submit 'Submit', :class => 'button right' %>
+              <%= c.submit 'Save Schedule', :class => 'button right' %>
           <% end %>
         </tbody>
       </table>
