--- a/proj2_from_scratch/scheduler/app/views/students/_student.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/students/_student.html.erb
@@ -1,2 +1,1 @@
-
-<!-- <td><%= student.id %>: <%= link_to 'profile', student_show_path(id: student.id) %></td> -->
+<td><%= student.id %>: <%= link_to 'profile', student_show_path(id: student.id) %></td>
