--- a/proj2_from_scratch/scheduler/app/views/home/index.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/home/index.html.erb
@@ -7,37 +7,9 @@
 <p><%= Admin.count %> admin(s) registered</p>
 <p><%= Course.count %> course(s) added </p> -->
   <h1 class="home-header"> SCHEDULER </h1>
-    <div class="container">
-      <div class="row">
-        <h3>Students</h3>
-        <div class="column">
-          <table class="table">
-            <tbody>
-              <% @students.each do |student| %>
-                <tr>
-                  <%= render student %>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
+    <div class="container" style="height: 600px;">
 
-    <div class="container">
-      <div class="row">
-        <h3>Admins</h3>
-        <div class="column">
-          <table class="table">
-            <tbody>
-              <% @admins.each do |admin| %>
-                <tr>
-                  <%= render admin %>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
-      </div>
     </div>
-  </div>
+    <div class="bottom-container">
+    </div>
+</div>
