--- a/proj2_from_scratch/scheduler/app/views/schedules/new.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/schedules/new.html.erb
@@ -1,4 +1,3 @@
-
 <div class="container">
   <div class="row">
     <h3>Create Schedule!</h3>
@@ -18,8 +17,8 @@
             <tbody>
               <% @courses.each do |c| %>
                 <tr>
-                  <%= c.id %>: <%= c.title %>: <%= c.course_name %>
-                  <%= button_to "Add Class", add_class_path(id: c.id, schedule: @schedule), :class => "button small", :method => :get %>
+                  <%= c.id %>: <%= c.subject %> <%= c.nbr %>: <%= c.title %>
+                  <%= button_to "Add Class", add_class_path(id: c.id, schedule: @schedule), :class => "button small", :method => :patch %>
                   <br>
                 </tr>
               <% end %>
@@ -30,10 +29,14 @@
     </div>
     <% end %>
 
+    <% @schedule = flash[:schedule] %>
+
     <h4> Saved Courses </h4>
-    <% @schedule.courses.each do |course| %>
+      <% if !@schedule.nil? %>
+      <% @schedule.courses.each do |course| %>
           <%= course.id %>, <%= course.title %> <br>
         <% end %>
+      <% end %>
 
 
     <br> <br>
@@ -42,8 +45,10 @@
     <div class="column">
       <table class="table">
         <tbody>
-          <%= form_for @schedule, :url => schedules_path do |c| %>
-              <%= c.submit 'Save Schedule', :class => 'button right' %>
+          <% if !@schedule.nil? %>
+            <%= form_for @schedule, :url => schedules_path do |c| %>
+                <%= c.submit 'Save Schedule', :class => 'button right' %>
+            <% end %>
           <% end %>
         </tbody>
       </table>
