--- a/proj2_from_scratch/scheduler/app/views/layouts/_navigation.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/layouts/_navigation.html.erb
@@ -2,37 +2,38 @@
 <div class="container-fluid">
 <!-- Brand and toggle get grouped for better mobile display -->
 <div class="navbar-header">
-  <a class="navbar-brand" href="/">Scheduler</a>
+	<a class="navbar-brand" href="/">Scheduler</a>
 </div>
 <ul class="nav navbar-nav navbar-left">
-  <li><a href="/courses">Courses</a></li>
+	<li><a href="/courses">Courses</a></li>
 </ul>
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-  <ul class="nav navbar-nav navbar-right">
-    <% if current_student %>
-    <li><a href="/students/edit"><%= current_student.email %></a></li>
-    <li> <%= link_to "Logout", destroy_student_session_path, method: :delete %> </li>
-    <% else %>
-      <% if current_admin %>
-      <li><a href="/admins/edit"><%= current_admin.email %></a></li>
-      <li> <%= link_to "Logout", destroy_admin_session_path, method: :delete %> </li>
-      <% else %>
-      <li> <%= link_to "Log In", home_login_path %> </li>
-      <li> <%= link_to "Sign Up", home_signup_path %> </li>
+	<ul class="nav navbar-nav navbar-right">
+		<% if current_student %>
+			<li> <%= link_to "Profile", student_show_path(id: current_student.id), method: :get %> </li>
+			<li><a href="/students/edit">Edit</a></li>
+			<li> <%= link_to "Logout", destroy_student_session_path, method: :delete %> </li>
+		<% else %>
+			<% if current_admin %>
+				<li> <%= link_to "Profile", admin_show_path(id: current_admin.id), method: :get %> </li>
+				<li><a href="/admins/edit">Edit</a></li>
+				<li> <%= link_to "Logout", destroy_admin_session_path, method: :delete %> </li>
+			<% else %>
+				<li> <%= link_to "Log In", home_login_path %> </li>
+				<li> <%= link_to "Sign Up", home_signup_path %> </li>
+			<% end %>
+		<% end %>
 
-      <% end %>
-    <% end %>
-
-  </ul>
+	</ul>
 </div><!-- /.navbar-collapse -->
 </div><!-- /.container-fluid -->
 </nav>
 
 <!-- <%# navigation styled for Zurb Foundation 5 %>
 <nav class="top-bar" data-topbar>
-  <div class="top-bar-section">
-    <ul class="right">
-      <%= render 'layouts/navigation_links' %>
-    </ul>
-  </div>
+	<div class="top-bar-section">
+		<ul class="right">
+			<%= render 'layouts/navigation_links' %>
+		</ul>
+	</div>
 </nav> -->
