--- a/proj2_from_scratch/scheduler/app/views/schedules/new.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/schedules/new.html.erb
@@ -1,57 +1,10 @@
-<div class="container">
-  <div class="row">
-    <h3>Create Schedule!</h3>
-    <div class="column">
-      <%= form_tag(schedule_new_path, :method => "get", id: "search-form") do %>
-      <%= text_field_tag :search, params[:search], placeholder: "Search Courses", size: 50 %>
-      <%= submit_tag "Search", :class => 'button right small' %>
-      <% end %>
-    </div>
-
-  <h4>Results</h4>
-  <% if @courses %>
-    <div class="container">
-      <div class="row">
-        <div class="column">
-          <table class="table">
-            <tbody>
-              <% @courses.each do |c| %>
-                <tr>
-                  <%= c.id %>: <%= c.subject %> <%= c.nbr %>: <%= c.title %>
-                  <%= button_to "Add Class", add_class_path(id: c.id, schedule: @schedule), :class => "button small", :method => :patch %>
-                  <br>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
+<div style="margin-left: 50px;">
+  <h3>Create a New Schedule!</h3>
+  <%= form_for @schedule, :url => schedules_path do |s| %>
+      <div class="form-group">
+        <%= s.label :name, 'Name of Schedule: ' %>
+        <%= s.text_field :name, :autofocus => true, class: 'form-control' %>
       </div>
-    </div>
-    <% end %>
-
-    <% @schedule = flash[:schedule] %>
-
-    <h4> Saved Courses </h4>
-      <% if !@schedule.nil? %>
-      <% @schedule.courses.each do |course| %>
-          <%= course.id %>, <%= course.title %> <br>
-        <% end %>
-      <% end %>
-
-
-    <br> <br>
-
-
-    <div class="column">
-      <table class="table">
-        <tbody>
-          <% if !@schedule.nil? %>
-            <%= form_for @schedule, :url => schedules_path do |c| %>
-                <%= c.submit 'Save Schedule', :class => 'button right' %>
-            <% end %>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-  </div>
+      <%= s.submit 'Submit', :class => 'button right' %>
+  <% end %>
 </div>
