--- a/proj2_from_scratch/scheduler/app/views/courses/show.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/courses/show.html.erb
@@ -6,5 +6,31 @@
 	<p> Instructor: <%= @course.instructor %> </p>
 	<p> Description: <%= @course.description %> </p>
 
+	<h2>Comments</h2>
+	<table class="table">
+		<tbody>
+			<% Comment.all do |c| %>
+				<tr>
+					<% if c.user == 'admin' %>
+						@admin = Admin.where(email: c.email)
+						<p><%= link_to @admin.email, admin_show_path(id: @admin.id) %> said on <%= c.created_at %>: </p>
+	            		<p><%= c.text %></p>
+	            	<% elsif c.user == 'student' %>
+	            		@student = Student.where(email: c.email)
+	            		<p><%= link_to @student.email, student_show_path(id: @student.id) %> said on <%= c.created_at %>: </p>
+	            		<p><%= c.text %></p>
+	            	<% end %>
+	        	</tr>		
+	        <% end %>
+	    </tbody>
+	</table>
+	<%= form_for @comment, :url => comments_path do |c| %>
+  		<div class="form-group">
+        	<%= c.label :text, 'Enter your comment here:' %>
+        	<%= c.text_field :text, :autofocus => true, class: 'form-control' %>
+      	</div>
+	    <%= c.submit 'Submit', :class => 'button right' %>
+	<% end %>
+
 	<%= button_to "Back", admin_show_path(id: current_admin.id), :class => "button medium", :method => :get %>
 </div>
