--- a/proj2_from_scratch/scheduler/app/views/courses/department.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/courses/department.html.erb
@@ -7,7 +7,7 @@
           <% @courses.each do |c| %>
             <tr>
               <%= c.subject %> <%= c.nbr%>: <%= c.title%> 
-              <%= link_to "More Info", course_show_path(id: c.id) %>
+              <%= link_to "[More Info]", course_show_path(id: c.id) %>
               <br>
             </tr>
           <% end %>
