can delete schedules and did more styling

--- a/proj2_from_scratch/scheduler/app/assets/stylesheets/edit.css
+++ b/proj2_from_scratch/scheduler/app/assets/stylesheets/edit.css
@@ -1,3 +1,5 @@
+
+
 .edit-container {
   margin-top: 40px;
   width: 400px;
@@ -40,7 +42,10 @@
 	padding:9px 23px;
   margin-bottom: 10px;
   border: none;
+  display: inline-block;
+  font-family: 'Roboto', sans-serif;
 }
+
 .button:hover {
 	background-color:#0688fa;
 }
@@ -71,3 +76,21 @@
 .navbar-styling {
   background-color: rgb(212, 230, 243);
 }
+
+.table {
+  border-collapse: collapse;
+  font-size: 16px;
+}
+
+th, td {
+  text-align: left;
+  border: 1px solid #ddd;
+}
+
+th {
+  background-color: rgb(212, 230, 243);
+}
+
+ tr:hover {
+   background-color: #f5f5f5;
+ }
