--- a/proj2_from_scratch/scheduler/app/views/schedules/add_class.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/schedules/add_class.html.erb
@@ -1,22 +1,1 @@
-gjgfjdlhh;
-this is the add_class_path
-<br>
-<%= @schedule.name %>
-<div class="column">
-  <h4> Courses </h4>
-  <% if @schedule.courses.empty? %>
-     <p> there are no courses on here why :'( <br>
-         this is the schedule name and id: <%= @schedule.name%>, <%= @schedule.id %>
-     </p>
-  <% else %>
-      <p> there are courses yay! <%= @schedule.courses %>
-  <% end %>
-  <br>
-  <% @schedule.courses.each do |c| %>
-    <%= @schedule.courses %>
-    <%= c.subject %>, <%= c.nbr %>, <%= c.title %>
-    <br>
-  <% end %>
-</div>
-
-<%= button_to "Back", schedule_edit_path(id: @schedule.id, courses: @schedule.courses), :class => "button small", :method => :get %>
+sfasfasdfas
