--- a/proj2_from_scratch/scheduler/app/views/schedules/new.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/schedules/new.html.erb
@@ -1,4 +1,5 @@
-<div style="margin-left: 50px;">
+
+<div class="edit-container" style="margin-top: 50px; margin-left: 100px;">
   <h3>Create a New Schedule!</h3>
   <%= form_for @schedule, :url => schedules_path do |s| %>
       <div class="form-group">
