--- a/proj2_from_scratch/scheduler/app/views/courses/show.html.erb
+++ b/proj2_from_scratch/scheduler/app/views/courses/show.html.erb
@@ -20,7 +20,7 @@
 	            		<p><%= link_to @student.email, student_show_path(id: @student.id) %> said on <%= c.created_at %>: </p>
 	            		<p><%= c.text %></p>
 	            	<% end %>
-	        	</tr>		
+	        	</tr>
 	        <% end %>
 	    </tbody>
 	</table>
@@ -32,5 +32,7 @@
 	    <%= c.submit 'Submit', :class => 'button right' %>
 	<% end %>
 
-	<%= button_to "Back", admin_show_path(id: current_admin.id), :class => "button medium", :method => :get %>
+	<%= button_to "Back", course_show_path(id: 0), :class => "button medium", :method => :get %>
+
+
 </div>
